@@ -1,3 +1,7 @@
+2007-07-28  Vitaly Alexeev <tishka92@yahoo.com>
+	
+	* gameswf/gameswf_action.cpp: null out object's members before deleting
+
 2007-07-26  Vitaly Alexeev <tishka92@yahoo.com>
 	
 	* base/smart_ptr.h: applied 'mutable'
